--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -32,7 +32,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  height: 105px;
+  height: 104px;
 }
 
 .header__logo {
